# code-solver

./: .gitignore  README.md  activate-env.sh  leetcode.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
docs/: development_workflow.md  setup_guide.md  usage_guide.md
problems/easy/: two-sum.json  valid-parentheses.json
problems/medium/: rna-strand-folding-score.json
progress/: stats.json
scripts/: setup-environments.sh  setup-node-env.sh  setup-python-env.sh
solutions/python/: rna-strand-folding-score.py  two-sum.py  valid-parentheses.py
solutions/react-ts/: rna-strand-folding-score.ts  two-sum.ts  valid-parentheses.ts
templates/: problem_template.json  python_solution_template.py  react_ts_solution_template.ts
tools/: claude_helper.py  problem_manager.py  test_runner.py
